force-app/main/default/objects/inspire1__Sync_Queue2__c/inspire1__Sync_Queue2__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Queue used to process syncing between Salesforce Tasks with Project Tasks.</description>
    <label>Sync Queue</label>
    <nameField>
        <displayFormat>SQE-{000000}</displayFormat>
        <label>Sync Queue Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>