force-app/main/default/objects/inspire1__Sync_Queue2__c/fields/inspire1__DependencyType__c.field-meta.xml
<CustomField>
    <fullName>inspire1__DependencyType__c</fullName>
    <label>Dependency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>