force-app/main/default/objects/inspire1__Sync_Queue2__c/fields/inspire1__Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Failure_Code__c</fullName>
    <description>Captures failure code of sync for debugging.</description>
    <label>Failure Code</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>