force-app/main/default/objects/inspire1__Sync_Queue2__c/fields/inspire1__Priority__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Priority__c</fullName>
    <description>Priority value for sync.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>