force-app/main/default/objects/inspire1__Sync_Queue2__c/fields/inspire1__Process_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Process_Date__c</fullName>
    <label>Process Date</label>
    <type>DateTime</type>
</CustomField>