force-app/main/default/objects/inspire1__Sync_Queue2__c/fields/inspire1__Project_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Task_ID__c</fullName>
    <description>Project Task to sync to.</description>
    <label>Project Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>