force-app/main/default/objects/inspire1__Sync_Queue2__c/fields/inspire1__Salesforce_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Salesforce_Task_ID__c</fullName>
    <description>ID of related Salesforce Task.</description>
    <label>Salesforce Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>