force-app/main/default/objects/inspire1__Sync_Queue2__c/fields/inspire1__Sync_Mode__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Sync_Mode__c</fullName>
    <description>Defines the type of Sync to be performed.</description>
    <label>Sync Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>% Complete</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Rollup</fullName>
            </value>
            <value>
                <fullName>Timesheet Rollup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>