force-app/main/default/objects/inspire1__Sync_Queue2__c/fields/inspire1__Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Sync_Status__c</fullName>
    <description>Defines the status of sync for entry.</description>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>