force-app/main/default/objects/inspire1__Sync_Queue2__c/fields/inspire1__Time_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Time_Entry_ID__c</fullName>
    <label>Time Entry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>