force-app/main/default/objects/inspire1__Sync_Queue2__c/listViews/inspire1__All_Sync_Queues.listView-meta.xml
<ListView>
    <fullName>inspire1__All_Sync_Queues</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Sync_Mode__c</columns>
    <columns>inspire1__Sync_Status__c</columns>
    <columns>inspire1__Process_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>inspire1__Failure_Code__c</columns>
    <columns>inspire1__Salesforce_Task_ID__c</columns>
    <columns>inspire1__Project_Task_ID__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Sync Queues</label>
</ListView>